# complete_coverage

./: .gitmodules  .rosinstall  Dockerfile  LICENSE  README.md
coverage_binn/: CMakeLists.txt  package.xml
coverage_binn/cfg/: binn.rviz
coverage_binn/include/coverage_binn/: coverage_binn.h  partition_binn.h  simple_dubins_path.h
coverage_binn/include/simple_dubins_path/: simple_dubins_path.h
coverage_binn/launch/: coverage_binn.launch
coverage_binn/src/: coverage_binn.cpp  coverage_binn_node.cpp  partition_binn.cpp  simple_dubins_path.cpp
coverage_boustrophedon/: CMakeLists.txt  package.xml
coverage_boustrophedon/config/: coverage.rviz  real_coverage.rviz
coverage_boustrophedon/include/coverage/: a_star.h  coverage.h  partition.h
coverage_boustrophedon/include/guidance/: guidance.h
coverage_boustrophedon/include/simple_dubins_path/: simple_dubins_path.h
coverage_boustrophedon/launch/: coverage.launch  guidance.launch  real_coverage.launch  visualize.launch
coverage_boustrophedon/src/: coverage.cpp  guidance.cpp  map_processing.cpp  partition.cpp  simple_dubins_path.cpp  simple_dubins_path_node.cpp
etc/: rplidar.rules  xsens.rules
guidance/: CMakeLists.txt  package.xml
guidance/include/guidance/: guidance.h
guidance/launch/: guidance.launch  real_guidance.launch  sim_guidance.launch
guidance/src/: guidance.cpp  guidance_node.cpp
map_inflating/: CMakeLists.txt  package.xml
map_inflating/config/: map_params.yaml
map_inflating/include/map_inflating/: map_inflating.h
map_inflating/launch/: map_inflating.launch
map_inflating/src/: map_inflating.cpp  map_inflating_node.cpp
mr_obs_connector/: CMakeLists.txt  package.xml
mr_obs_connector/launch/: mr_obs_connector.launch
mr_obs_connector/scripts/: mr_obs_connector.py  mr_ros.proto  mr_ros_pb2.py
otter_control/: CMakeLists.txt  package.xml
otter_control/config/: control.yaml
otter_control/launch/: control.launch
otter_coverage/: CMakeLists.txt  package.xml
otter_coverage/config/: coverage.rviz
otter_coverage/include/coverage/: coverage.h  partition.h
otter_coverage/include/guidance/: guidance.h
otter_coverage/include/map_processing/: map_processing.h
otter_coverage/include/simple_dubins_path/: simple_dubins_path.h
otter_coverage/launch/: coverage.launch  guidance.launch
otter_coverage/msg/: DubinInput.msg
otter_coverage/src/: coverage.cpp  coverage_node.cpp  guidance.cpp  guidance_node.cpp  map_processing.cpp  map_processing_node.cpp  partition.cpp  simple_dubins_path.cpp
otter_description/: CMakeLists.txt  package.xml
otter_description/launch/: description.launch
otter_description/urdf/: materials.xacro  otter.gazebo  otter.urdf  otter.xacro
otter_gazebo/: CMakeLists.txt  package.xml
otter_gazebo/config/: gazebo_ros_control_params.yaml
otter_gazebo/launch/: otter.launch
otter_navigation/: CMakeLists.txt  package.xml
otter_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav.rviz
otter_navigation/launch/: navigation.launch
otter_slam/: CMakeLists.txt  package.xml
otter_slam/config/: otter.lua  pose_graph.lua  real_otter.lua  sim_otter.lua  slam.rviz  trajectory_builder_2d.lua
otter_slam/config_3d/: otter.lua
otter_slam/config_usv/: kingfisher.lua  otter.lua  real_otter.lua
otter_slam/launch/: imu.launch  kingfisher.launch  lidar.launch  otter.launch  real_otter.launch  sim_otter.launch  slam.launch  slam_3d.launch  slam_kingfisher.launch  slam_usv.launch
otter_slam/src/: laser_filter.cpp
otter_slam/urdf/: otter.urdf
sensors/: CMakeLists.txt  package.xml
sensors/launch/: a2_rplidar.launch  gps.launch  imu.launch  lidar.launch  localization.launch  quat2rpy.launch
sensors/src/: android_filter.cpp  laser_filter.cpp  odom_filter.cpp  quat2rpy.py
usv_msgs/: CMakeLists.txt  package.xml
usv_msgs/msg/: SpeedCourse.msg
