<?xml version="1.0"?>
<package format="2">
  <name>usv_msgs</name>
  <version>0.0.0</version>
  <description>The usv_msgs package</description>

  <maintainer email="jhlenes@outlook.com">henrik</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
